--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ twitter: https://twitter.com/hyphacoop/
 handbook: https://link.hypha.coop/handbook
 # facebook: https://www.facebook.com/hyphacoop/
 # instagram: https://instagram.com/hyphacoop/
-footer: Hypha Worker Co-operative Inc., Ontario Corporation No. 5019866
+footer: Hypha Worker Co-operative Inc.,<br> Ontario Corporation No. 5019866
 
 description: >-
   We cultivate collective growth and meaningful livelihoods through learning and building technologies together.
