--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Hypha Worker Co-operative
 email: hello [at] hypha [dot] coop
 email-hidden: "%68%65%6c%6c%6f%40%68%79%70%68%61%2e%63%6f%6f%70"
-phone: +1-437-887-6936
+phone: +1 437-887-6936
 address: Toronto, ON
 github: https://github.com/hyphacoop
 linkedin: https://www.linkedin.com/company/hyphacoop/
@@ -9,7 +9,7 @@ twitter: https://twitter.com/hyphacoop/
 handbook: https://link.hypha.coop/handbook
 # facebook: https://www.facebook.com/hyphacoop/
 # instagram: https://instagram.com/hyphacoop/
-footer: Hypha Worker Co-operative Inc.,<br> Ontario Corporation No. 5019866
+footer: Hypha Worker Co-operative Inc.<br>Ontario Corporation No. 5019866
 
 description: >-
   We cultivate collective growth and meaningful livelihoods through learning and building technologies together.
