--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ rvm:
 before_install:
   # Here, we decrypt a passwordless ssh key for acting as a user on the server named "travis"
   #   # See: https://docs.travis-ci.com/user/encrypting-files/#Automated-Encryption
-  - if [ "$TRAVIS_SECURE_ENV_VARS" == true ]; then openssl aes-256-cbc -K $encrypted_894e8d657854_key -iv $encrypted_894e8d657854_iv -in scripts/id_rsa.enc -out scripts/id_rsa -d; fi
+  - if [ "$TRAVIS_SECURE_ENV_VARS" == true ]; then openssl aes-256-cbc -K $encrypted_894e8d657854_key -iv $encrypted_894e8d657854_iv -in _scripts/id_rsa.enc -out _scripts/id_rsa -d; fi
   - if [ "$TRAVIS_SECURE_ENV_VARS" == true ]; then chmod 400 scripts/id_rsa; fi
   # Bundler 2.0 support
   # See: https://docs.travis-ci.com/user/languages/ruby/#bundler-20
@@ -25,7 +25,7 @@ deploy:
   # See: https://docs.travis-ci.com/user/deployment/#Uploading-Files-and-skip_cleanup
   skip_cleanup: true
   provider: script
-  script: bash scripts/deploy.sh deploy scripts/id_rsa webserv.hypha.coop 10025
+  script: bash scripts/deploy.sh deploy _scripts/id_rsa webserv.hypha.coop 10025
   on:
     branch:
       - master
