--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Hypha Worker Co-operative
-email: hello [at] hypha [dot] coop
+email: hello@hypha.coop
 email-hidden: "%68%65%6c%6c%6f%40%68%79%70%68%61%2e%63%6f%6f%70"
 phone: +1 437-887-6936
 address: Toronto, ON
