--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ rvm:
 before_install:
   # Here, we decrypt a passwordless ssh key for acting as a user on the server named "travis"
   #   # See: https://docs.travis-ci.com/user/encrypting-files/#Automated-Encryption
-  - if [ "$TRAVIS_SECURE_ENV_VARS" == true ] && [ "$TRAVIS_BRANCH" = "master" ]; then openssl aes-256-cbc -K $encrypted_ecd13b88eda4_key -iv $encrypted_ecd13b88eda4_iv -in .scripts/id_rsa-production.enc -out .scripts/id_rsa-production -d; 
+  - if [ "$TRAVIS_SECURE_ENV_VARS" == true ] && [ "$TRAVIS_BRANCH" = "master" ]; then openssl aes-256-cbc -K $encrypted_ecd13b88eda4_key -iv $encrypted_ecd13b88eda4_iv -in .scripts/id_rsa-production.enc -out .scripts/id_rsa-production -d; fi
   - if [ "$TRAVIS_SECURE_ENV_VARS" == true ] && [ "$TRAVIS_BRANCH" = "master" ]; then chmod 400 .scripts/id_rsa-production; fi
   - if [ "$TRAVIS_SECURE_ENV_VARS" == true ] && [ "$TRAVIS_BRANCH" = "staging" ]; then openssl aes-256-cbc -K $encrypted_d3974dc451dd_key -iv $encrypted_d3974dc451dd_iv -in .scripts/id_rsa-staging.enc -out .scripts/id_rsa-staging -d; fi
   - if [ "$TRAVIS_SECURE_ENV_VARS" == true ] && [ "$TRAVIS_BRANCH" = "staging" ]; then chmod 400 .scripts/id_rsa-staging; fi
