--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,9 @@ before_install:
   - if [ "$TRAVIS_SECURE_ENV_VARS" == true ] && [ "$TRAVIS_BRANCH" == "master" ]; then openssl aes-256-cbc -K $encrypted_ecd13b88eda4_key -iv $encrypted_ecd13b88eda4_iv -in _scripts/id_rsa-production.enc -out _scripts/id_rsa-production -d; fi
   - if [ "$TRAVIS_SECURE_ENV_VARS" == true ] && [ "$TRAVIS_BRANCH" == "master" ]; then chmod 400 _scripts/id_rsa-production; fi
   - if [ "$TRAVIS_SECURE_ENV_VARS" == true ] && [ "$TRAVIS_BRANCH" == "master" ]; then echo "Detected 'master' branch, decrypted 'production' credentials"; fi
-  - openssl aes-256-cbc -K $encrypted_d3974dc451dd_key -iv $encrypted_d3974dc451dd_iv -in _scripts/id_rsa-staging.enc -out _scripts/id_rsa-staging -d
-  - chmod 400 _scripts/id_rsa-staging
-  - echo "Detected 'staging' branch, decrypted 'staging' credentials"
-  - echo "$TRAVIS_SECURE_ENV_VARS"
-  - echo "$TRAVIS_BRANCH"
+  - if [ "$TRAVIS_SECURE_ENV_VARS" == true ] && [ "$TRAVIS_BRANCH" == "staging" ]; then openssl aes-256-cbc -K $encrypted_d3974dc451dd_key -iv $encrypted_d3974dc451dd_iv -in _scripts/id_rsa-staging.enc -out _scripts/id_rsa-staging -d; fi
+  - if [ "$TRAVIS_SECURE_ENV_VARS" == true ] && [ "$TRAVIS_BRANCH" == "staging" ]; then chmod 400 _scripts/id_rsa-staging; fi
+  - if [ "$TRAVIS_SECURE_ENV_VARS" == true ] && [ "$TRAVIS_BRANCH" == "staging" ]; then echo "Detected 'staging' branch, decrypted 'staging' credentials"; fi
   # Bundler 2.0 support
   # See: https://docs.travis-ci.com/user/languages/ruby/#bundler-20
   - gem update --system
@@ -34,14 +32,14 @@ script: bundle exec jekyll build
 deploy:
   - provider: script
     script: if [ "$TRAVIS_BRANCH" = "staging" ]; then echo "Deploying to staging"; bash -x _scripts/deploy.sh deploy _scripts/id_rsa-staging bw1.staging.hypha.coop 8003 /var/www/staging.hypha.coop; elif [ "$TRAVIS_BRANCH" = "master" ]; then echo "Deploying to production"; bash -x _scripts/deploy.sh deploy _scripts/id_rsa-production bw1.hypha.coop 1003 /var/www/hypha.coop; fi
-    cleanup: false
+    skip_cleanup: true
     on:
       branch:
         - master
         - staging
   - provider: script
     script: tar -czvf www.tar.gz -C _site . && bash -x _scripts/deploy-dweb.sh "$DISTRIBUTED_PRESS_API_KEY" _scripts/config-dweb.json www.tar.gz
-    cleanup: false
+    skip_cleanup: true
     on:
       branch:
         - staging
