--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,9 @@ before_install:
   - gem update --system
   - gem install bundler
 
-#before_script:
-#  # Build Jekyll site
-#  - bundle exec jekyll build
+before_script:
+ # Build Jekyll site
+ - bundle exec jekyll build
 
 addons:
   apt:
