--- a/.travis.yml
+++ b/.travis.yml
@@ -5,33 +5,44 @@ rvm:
 before_install:
   # Here, we decrypt a passwordless ssh key for acting as a user on the server named "travis"
   #   # See: https://docs.travis-ci.com/user/encrypting-files/#Automated-Encryption
-  - if [ "$TRAVIS_SECURE_ENV_VARS" == true ] && [ "$TRAVIS_BRANCH" = "master" ]; then openssl aes-256-cbc -K $encrypted_ecd13b88eda4_key -iv $encrypted_ecd13b88eda4_iv -in _scripts/id_rsa-production.enc -out _scripts/id_rsa-production -d; fi
-  - if [ "$TRAVIS_SECURE_ENV_VARS" == true ] && [ "$TRAVIS_BRANCH" = "master" ]; then chmod 400 _scripts/id_rsa-production; fi
-  - if [ "$TRAVIS_SECURE_ENV_VARS" == true ] && [ "$TRAVIS_BRANCH" = "staging" ]; then openssl aes-256-cbc -K $encrypted_d3974dc451dd_key -iv $encrypted_d3974dc451dd_iv -in _scripts/id_rsa-staging.enc -out _scripts/id_rsa-staging -d; fi
-  - if [ "$TRAVIS_SECURE_ENV_VARS" == true ] && [ "$TRAVIS_BRANCH" = "staging" ]; then chmod 400 _scripts/id_rsa-staging; fi
+  - if [ "$TRAVIS_SECURE_ENV_VARS" == true ] && [ "$TRAVIS_BRANCH" == "master" ]; then openssl aes-256-cbc -K $encrypted_ecd13b88eda4_key -iv $encrypted_ecd13b88eda4_iv -in _scripts/id_rsa-production.enc -out _scripts/id_rsa-production -d; fi
+  - if [ "$TRAVIS_SECURE_ENV_VARS" == true ] && [ "$TRAVIS_BRANCH" == "master" ]; then chmod 400 _scripts/id_rsa-production; fi
+  - if [ "$TRAVIS_SECURE_ENV_VARS" == true ] && [ "$TRAVIS_BRANCH" == "master" ]; then echo "Detected 'master' branch, decrypted 'production' credentials"; fi
+  - if [ "$TRAVIS_SECURE_ENV_VARS" == true ] && [ "$TRAVIS_BRANCH" == "staging" ]; then openssl aes-256-cbc -K $encrypted_d3974dc451dd_key -iv $encrypted_d3974dc451dd_iv -in _scripts/id_rsa-staging.enc -out _scripts/id_rsa-staging -d; fi
+  - if [ "$TRAVIS_SECURE_ENV_VARS" == true ] && [ "$TRAVIS_BRANCH" == "staging" ]; then chmod 400 _scripts/id_rsa-staging; fi
+  - if [ "$TRAVIS_SECURE_ENV_VARS" == true ] && [ "$TRAVIS_BRANCH" == "staging" ]; then echo "Detected 'staging' branch, decrypted 'staging' credentials"; fi
   # Bundler 2.0 support
   # See: https://docs.travis-ci.com/user/languages/ruby/#bundler-20
   - gem update --system
   - gem install bundler
 
 before_script:
-  # Build Jekyll site
-  - bundle exec jekyll build
+ # Build Jekyll site
+ - bundle exec jekyll build
+
+addons:
+  apt:
+    packages:
+    - libcurl4-openssl-dev
 
 cache: bundler
 
-script: travis_retry bundle exec htmlproofer --check-html --allow-hash-href ./_site
+script: travis_retry bundle exec htmlproofer --check-html --allow-hash-href --typhoeus-config '{"headers":{"User-Agent":"Mozilla/5.0 (X11; Linux i686; rv:84.0) Gecko/20100101 Firefox/84.0"}}' ./_site
 
 deploy:
-  # Cleanup removes keys and build artefacts.
-  # See: https://docs.travis-ci.com/user/deployment/#Uploading-Files-and-skip_cleanup
-  skip_cleanup: true
-  provider: script
-  script: if [ "$TRAVIS_BRANCH" = "staging" ]; then echo "Deploying to staging"; bash -x _scripts/deploy.sh deploy _scripts/id_rsa-staging bw1.staging.hypha.coop 8003 /var/www/staging.hypha.coop; elif [ "$TRAVIS_BRANCH" = "master" ]; then echo "Deploying to production"; bash -x _scripts/deploy.sh deploy _scripts/id_rsa-production bw1.hypha.coop 1003 /var/www/hypha.coop; fi
-  on:
-    branch:
-      - master
-      - staging
+  - provider: script
+    script: if [ "$TRAVIS_BRANCH" = "staging" ]; then echo "Deploying to staging"; bash -x _scripts/deploy.sh deploy _scripts/id_rsa-staging bw1.staging.hypha.coop 8003 /var/www/staging.hypha.coop; elif [ "$TRAVIS_BRANCH" = "master" ]; then echo "Deploying to production"; bash -x _scripts/deploy.sh deploy _scripts/id_rsa-production bw1.hypha.coop 1003 /var/www/hypha.coop; fi
+    skip_cleanup: true
+    on:
+      branch:
+        - master
+        - staging
+  - provider: script
+    script: tar -czvf www.tar.gz -C _site . && bash -x _scripts/deploy-dweb.sh $distributed_press_api_key _scripts/config-dweb.json www.tar.gz
+    skip_cleanup: true
+    on:
+      branch:
+        - staging
 
 notifications:
   email: false
