canonical url fix

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ twitter: https://twitter.com/hyphacoop/
 handbook: https://link.hypha.coop/handbook
 # facebook: https://www.facebook.com/hyphacoop/
 # instagram: https://instagram.com/hyphacoop/
+url: "https://hypha.coop"
 footer: Hypha Worker Co-operative Inc.<br>Ontario Corporation No. 5019866
 
 description: >-
