--- a/_scripts/config-dweb.json
+++ b/_scripts/config-dweb.json
@@ -3,8 +3,8 @@
   "publication": {
     "protocol": {
       "http": {
-          "enable": false,
-          "dnsupdate": false
+          "enabled": false,
+          "purgeIfDisabled": false
       }
     }
   }
