--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
 
 before_script:
  # Build Jekyll site
- - bundle exec jekyll build
+ - make build
 
 addons:
   apt:
@@ -27,7 +27,7 @@ addons:
 
 cache: bundler
 
-script: travis_retry bundle exec htmlproofer --check-html --allow-hash-href --typhoeus-config '{"headers":{"User-Agent":"Mozilla/5.0 (X11; Linux i686; rv:84.0) Gecko/20100101 Firefox/84.0"}}' --internal-domains hypha.coop ./_site
+script: travis_retry make check
 
 deploy:
   - provider: script
