Removed jekyll-relative-urls as was causing issues with anchors.

--- a/_config.yml
+++ b/_config.yml
@@ -34,9 +34,7 @@ defaults:
     values:
       layout: dripline/post
 
-plugins:
-  # Used for relativizing urls for dweb, which can be accessed with various levels of path nesting.
-  - jekyll-relative-urls
+plugins: []
   # TODO: Fix issue with conflict between dweb's requirement for relative urls and RSS's for absolute.
   # See: https://github.com/hyphacoop/hypha.coop/issues/24
   #- jekyll-feed
