--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,11 +5,10 @@
 
 version: 2
 updates:
-  - package-ecosystem: "" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  - package-ecosystem: "bundler" 
+    directory: "/" 
     schedule:
       interval: "daily"
-      
     # Apply default reviewer to created pull requests
     assignees:
       - "ASoTNetworks"
