Initial GitHub actions testing

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,6 @@ jobs:
       # Copying files and artifacts via SSH
       - run: ifconfig
       - run: sudo dmidecode
-      - run: echo "GitHub branch is ${{ github.ref }}"
-      - run: ls ${{ github.workspace }}
-      - run: cd ${{ github.workspace }}; if [ "${{ github.ref }}" = "refs/heads/staging" ]; then echo "Saving staging key"; echo ${{ secrets.SSH_STG }} > _scripts/id_rsa-staging; elif [ ${{ github.ref }} = "refs/heads/master" ]; then echo "Saving production key"; echo ${{ secrets.SSH_PROD }} > _scripts/id_rsa-production; fi
-      - run: cd ${{ github.workspace }}; if [ "${{ github.ref }}" = "refs/heads/staging" ]; then echo "Deploying to staging"; bash -x _scripts/deploy.sh deploy _scripts/id_rsa-staging bw1.staging.hypha.coop 8003 /var/www/staging.hypha.coop; elif [ ${{ github.ref }} = "refs/heads/master" ]; then bash -x _scripts/deploy.sh deploy _scripts/id_rsa-production bw1.hypha.coop 1003 /var/www/hypha.coop; fi
+      if: ${{ github.ref == 'refs/heads/staging' }}
+        - run: echo "Deploying on STAGING"
+        
