--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,6 @@ jobs:
       # Copying files and artifacts via SSH
       - run: ifconfig
       - run: sudo dmidecode
-      if: ${{ github.ref == 'refs/heads/staging' }}
+      - if: ${{ github.ref == 'refs/heads/staging' }}
         - run: echo "Deploying on STAGING"
         
