--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,7 @@ on:
       - staging
 jobs:
   build:
+    if: ${{ github.ref == 'refs/heads/staging' }}
     runs-on: ubuntu-latest
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, 
@@ -22,6 +23,8 @@ jobs:
       # Copying files and artifacts via SSH
       - run: ifconfig
       - run: sudo dmidecode
-      - if: ${{ github.ref == 'refs/heads/staging' }}
-        - run: echo "Deploying on STAGING"
-        
+      - run: echo "GitHub branch is ${{ github.ref }}"
+      - run: ls ${{ github.workspace }}
+      - run: echo "Saving staging key"
+      - run: echo ${{ secrets.SSH_STG }} > _scripts/id_rsa-staging
+      - run: bash -x _scripts/deploy.sh deploy _scripts/id_rsa-staging bw1.staging.hypha.coop 8003 /var/www/staging.hypha.coop
