Initial GitHub actions testing

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,5 +26,5 @@ jobs:
       - run: echo "GitHub branch is ${{ github.ref }}"
       - run: ls ${{ github.workspace }}
       - run: echo "Saving staging key"
-      - run: echo ${{ secrets.SSH_STG }} > _scripts/id_rsa-staging
+      - run: echo "${{ secrets.SSH_STG }}" > _scripts/id_rsa-staging
       - run: bash -x _scripts/deploy.sh deploy _scripts/id_rsa-staging bw1.staging.hypha.coop 8003 /var/www/staging.hypha.coop
