--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,11 +3,13 @@ on:
   push:
     branches:
       - staging
+      - master
   pull_request:
     branches:
       - staging
+      - master
 jobs:
-  build:
+  build-staging:
     if: ${{ github.ref == 'refs/heads/staging' }}
     runs-on: ubuntu-latest
     steps:
@@ -29,3 +31,26 @@ jobs:
       - run: echo "${{ secrets.SSH_STG }}" > _scripts/id_rsa-staging
       - run: chmod 600 _scripts/id_rsa-staging
       - run: bash -x _scripts/deploy.sh deploy _scripts/id_rsa-staging bw1.staging.hypha.coop 8003 /var/www/staging.hypha.coop
+  build-production:
+    if: ${{ github.ref == 'refs/heads/master' }}
+    runs-on: ubuntu-latest
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, 
+      # so your workflow can access it
+      - name: Checkout repo
+        uses: actions/checkout@master
+      
+      # Build Jekyll Site
+      - name: Build Jekyll
+        uses: jerryjvl/jekyll-build-action@v1
+
+      # Copying files and artifacts via SSH
+      - run: ifconfig
+      - run: sudo dmidecode
+      - run: echo "GitHub branch is ${{ github.ref }}"
+      - run: ls ${{ github.workspace }}
+      - run: echo "Saving production key"
+      - run: echo "${{ secrets.SSH_PROD }}" > _scripts/id_rsa-production
+      - run: chmod 600 _scripts/id_rsa-production
+      - run: bash -x _scripts/deploy.sh deploy _scripts/id_rsa-production bw1.hypha.coop 1003 /var/www/hypha.coop
+      - run: tar -czvf www.tar.gz -C _site .
