Manually build jekyll

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,8 @@ jobs:
       #- name: Build Jekyll
       #  uses: jerryjvl/jekyll-build-action@v1
       - run: echo "Building Jekyll site"
-      - run: gem update --system
-      - run: gem install bundler
+      - run: sudo gem update --system
+      - run: sudo gem install bundler
       - run: make build-dweb
 
       # Copying files and artifacts via SSH
