Manually build jekyll

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,7 @@ jobs:
       - run: echo "Building Jekyll site"
       - run: sudo gem update --system
       - run: sudo gem install bundler
+      - run: sudo gem install jekyll
       - run: make build-dweb
 
       # Copying files and artifacts via SSH
