--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,11 +13,15 @@ jobs:
     if: ${{ github.ref == 'refs/heads/staging' }}
     runs-on: ubuntu-latest
     steps:
+      # Get system info
+      - run: ifconfig
+      - run: sudo dmidecode
+      
       # Checks-out your repository under $GITHUB_WORKSPACE, 
       # so your workflow can access it
       - name: Checkout repo
         uses: actions/checkout@master
-      
+
       # Build Jekyll Site
       #- name: Build Jekyll
       #  uses: jerryjvl/jekyll-build-action@v1
@@ -25,11 +29,10 @@ jobs:
       - run: sudo gem update --system
       - run: sudo gem install bundler
       - run: sudo gem install jekyll
+      - run: bundle install
       - run: make build-dweb
 
       # Copying files and artifacts via SSH
-      - run: ifconfig
-      - run: sudo dmidecode
       - run: echo "GitHub branch is ${{ github.ref }}"
       - run: ls ${{ github.workspace }}
       - run: echo "Saving staging key"
