--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,8 +9,7 @@ on:
       - staging
       - master
 jobs:
-  build-staging:
-    if: ${{ github.ref == 'refs/heads/staging' }}
+  build:
     runs-on: ubuntu-latest
     steps:
       # Get system info
@@ -33,6 +32,8 @@ jobs:
       - run: make build-dweb
       - run: make check
 
+    steps:
+      if: ${{ github.ref == 'refs/heads/staging' }}
       # Copying files and artifacts via SSH
       - run: echo "GitHub branch is ${{ github.ref }}"
       - run: ls ${{ github.workspace }}
@@ -40,19 +41,9 @@ jobs:
       - run: echo "${{ secrets.SSH_STG }}" > _scripts/id_rsa-staging
       - run: chmod 600 _scripts/id_rsa-staging
       - run: bash -x _scripts/deploy.sh deploy _scripts/id_rsa-staging bw1.staging.hypha.coop 8003 /var/www/staging.hypha.coop
-  build-production:
-    if: ${{ github.ref == 'refs/heads/master' }}
-    runs-on: ubuntu-latest
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, 
-      # so your workflow can access it
-      - name: Checkout repo
-        uses: actions/checkout@master
-      
-      # Build Jekyll Site
-      - name: Build Jekyll
-        uses: jerryjvl/jekyll-build-action@v1
 
+    steps:
+      if: ${{ github.ref == 'refs/heads/staging' }}
       # Copying files and artifacts via SSH
       - run: ifconfig
       - run: sudo dmidecode
