--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,28 +32,26 @@ jobs:
       - run: make build-dweb
       - run: make check
 
-    steps:
-      - name: Deploy Staging
-        if: ${{ github.ref == 'refs/heads/staging' }}
-        # Copying files and artifacts via SSH
-        run: echo "GitHub branch is ${{ github.ref }}"
-        run: ls ${{ github.workspace }}
-        run: echo "Saving staging key"
-        run: echo "${{ secrets.SSH_STG }}" > _scripts/id_rsa-staging
-        run: chmod 600 _scripts/id_rsa-staging
-        run: bash -x _scripts/deploy.sh deploy _scripts/id_rsa-staging bw1.staging.hypha.coop 8003 /var/www/staging.hypha.coop
+      - name: Deploy to Staging
+      if: ${{ github.ref == 'refs/heads/staging' }}
+      run: |
+        echo "GitHub branch is ${{ github.ref }}"
+        ls ${{ github.workspace }}
+        echo "Saving staging key"
+        echo "${{ secrets.SSH_STG }}" > _scripts/id_rsa-staging
+        chmod 600 _scripts/id_rsa-staging
+        bash -x _scripts/deploy.sh deploy _scripts/id_rsa-staging bw1.staging.hypha.coop 8003 /var/www/staging.hypha.coop
 
-    steps:
-      - name: Deploy Production
-        if: ${{ github.ref == 'refs/heads/staging' }}
-        # Copying files and artifacts via SSH
-        run: ifconfig
-        run: sudo dmidecode
-        run: echo "GitHub branch is ${{ github.ref }}"
-        run: ls ${{ github.workspace }}
-        run: echo "Saving production key"
-        run: echo "${{ secrets.SSH_PROD }}" > _scripts/id_rsa-production
-        run: chmod 600 _scripts/id_rsa-production
-        run: bash -x _scripts/deploy.sh deploy _scripts/id_rsa-production bw1.hypha.coop 1003 /var/www/hypha.coop
-        run: tar -czvf www.tar.gz -C _site .
-        run: bash -x _scripts/deploy-dweb.sh ${{ secrets.DISTRIBUTED_PRESS_API_KEY }} _scripts/config-dweb.json www.tar.gz
+    - name: Deploy to Production
+      if: ${{ github.ref == 'refs/heads/master' }}
+      run: |
+        ifconfig
+        sudo dmidecode
+        echo "GitHub branch is ${{ github.ref }}"
+        ls ${{ github.workspace }}
+        echo "Saving production key"
+        echo "${{ secrets.SSH_PROD }}" > _scripts/id_rsa-production
+        chmod 600 _scripts/id_rsa-production
+        bash -x _scripts/deploy.sh deploy _scripts/id_rsa-production bw1.hypha.coop 1003 /var/www/hypha.coop
+        tar -czvf www.tar.gz -C _site .
+        bash -x _scripts/deploy-dweb.sh ${{ secrets.DISTRIBUTED_PRESS_API_KEY }} _scripts/config-dweb.json www.tar.gz
