initial set up for openings posts

--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,8 @@ permalink: pretty
 
 collections:
   openings:
+    permalink: /openings/:title/
+    output: true
   people:
   posts:
     permalink: /dripline/:title/
