--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,11 @@ defaults:
       type: posts
     values:
       layout: dripline/post
-
+  -
+    scope:
+      type: openings
+    values:
+      layout: openings/opening
 plugins: []
   # TODO: Fix issue with conflict between dweb's requirement for relative urls and RSS's for absolute.
   # See: https://github.com/hyphacoop/hypha.coop/issues/24
