add images and other formatting

--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,11 @@ defaults:
       type: openings
     values:
       layout: openings/opening
+  -
+    scope: 
+      type: people
+    values:
+      avatar: default.png
 plugins: []
   # TODO: Fix issue with conflict between dweb's requirement for relative urls and RSS's for absolute.
   # See: https://github.com/hyphacoop/hypha.coop/issues/24
