--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
       - run: echo "Building Jekyll site"
       - run: sudo gem install bundler
       - run: sudo gem install jekyll
-      - run: bundle install
+      - run: sudo bundle install
       - run: make build-dweb
       - run: make check
 
