--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,9 @@ sass:
 permalink: pretty
 
 collections:
+  cosmos:
+    permalink: /doescosmos/:title
+    output: true
   openings:
     permalink: /openings/:title/
     output: true
@@ -48,7 +51,12 @@ defaults:
     scope: 
       type: people
     values:
-      avatar: default.png
+      avatar: default.png`
+  -
+    scope:
+      type: cosmos
+    values:
+      layout: dripline/post
 plugins: []
   # TODO: Fix issue with conflict between dweb's requirement for relative urls and RSS's for absolute.
   # See: https://github.com/hyphacoop/hypha.coop/issues/24
