--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ permalink: pretty
 
 collections:
   cosmos:
-    permalink: /doescosmos/:title
+    permalink: /doescosmos/:title/
     output: true
   openings:
     permalink: /openings/:title/
