Update feed configuration for dripline posts and cosmos collection
- Set dripline feed title to "Hypha Worker Co-operative | Dripline".
- Specify path for dripline feed.
- Add configuration for cosmos collection feed with its title and path.
- Test that replaces the forked jekyll-feed gem source with the official version from RubyGems.

--- a/_config.yml
+++ b/_config.yml
@@ -63,4 +63,9 @@ plugins: []
   #- jekyll-feed
 
 feed:
-  title: Dripline
+  title: "Hypha Worker Co-operative | Dripline"
+  path: "feed.xml"
+  collections:
+    cosmos:
+      path: "cosmos.xml"
+      title: "Hypha Does Cosmos"
