--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ github: https://github.com/hyphacoop
 linkedin: https://www.linkedin.com/company/hyphacoop/
 twitter: https://twitter.com/hyphacoop/
 handbook: https://link.hypha.coop/handbook
-rss: "https://hypha.coop/feed.xml"
+rss: "/feed.xml"
 # facebook: https://www.facebook.com/hyphacoop/
 # instagram: https://instagram.com/hyphacoop/
 url: "https://hypha.coop"
