Update deployment to use encoded key
- Modified GitHub Actions workflow to use the base64 encoded API key secret (`ENCODED_DP_AP_KEY_STAGING`).
- Updated the Makefile to decode the API key before passing it to the Jekyll build command.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
 
       - run: make build-dweb
         env:
-          DP_AP_KEY:  ${{ secrets.DP_AP_KEY }}
+          DP_AP_KEY:  ${{ secrets.ENCODED_DP_AP_KEY_STAGING }}
       - run: make check
 
       - name: Publish to Distributed Press Staging
