--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,9 +37,9 @@ jobs:
             sed -i 's|url: "https://hypha.coop"|url: "https://staging.hypha.coop"|' _config.yml
           fi
 
+      - run: echo ${{ secrets.ENCODED_DP_AP_KEY_STAGING }} | base64 --decode > /tmp/secret.txt
       - run: make build-dweb
-        env:
-          DP_AP_KEY:  ${{ secrets.ENCODED_DP_AP_KEY_STAGING }}
+
       - run: make check
 
       - name: Publish to Distributed Press Staging
@@ -59,3 +59,8 @@ jobs:
           dp_url: https://api.distributed.press
           refresh_token: ${{ secrets.DISTRIBUTED_PRESS_PRODUCTION_TOKEN}}
           site_url: hypha.coop
+
+      - name: Notify AP
+        run: bundle exec jekyll notify --key /tmp/secret.txt
+
+
