--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,6 +61,6 @@ jobs:
           site_url: hypha.coop
 
       - name: Notify AP
-        run: bundle exec jekyll notify --key /tmp/secret.txt
+        run: bundle exec jekyll notify --key /tmp/secret.txt --verbose
 
 
