--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,4 +63,11 @@ jobs:
       - name: Notify AP
         run: bundle exec jekyll notify --key /tmp/secret.txt --verbose
 
+      - name: Commit ActivityPub Data
+        uses: EndBug/add-and-commit@v9 
+        with:
+          add: '_data/activity_pub.yml'
+          default_author: github_actions
+          fetch: true
+
 
