Update checkout step in GitHub Actions to handle branch context for PRs
This change modifies the checkout step in the deploy.yml workflow to dynamically handle the branch context for both push and pull request events. By specifying 'ref: ${{ github.head_ref || github.ref }}', the workflow correctly checks out the relevant branch in all scenarios, preventing issues related to a detached HEAD state. This is particularly important for handling pull requests from forks, ensuring the workflow operates on the correct branch context and maintains the intended CI/CD process across all branch interactions.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,8 @@ jobs:
       # so your workflow can access it
       - name: Checkout repo
         uses: actions/checkout@master
+        with:
+          ref: ${{ github.head_ref || github.ref }}
 
       # Build Jekyll Site
       - run: echo "Building Jekyll site"
