Update GitHub Actions to Dynamically Configure URLs Based on Branch Context
This commit enhances the GitHub Actions workflow by introducing two key changes:

1. `Set Site URL based on branch`: This update ensures that the main site URL in `_config.yml` is dynamically set to the production URL ("https://hypha.coop") when either pushing to the `master` branch or creating a pull request targeting `master`. This change supports proper environment configuration for production deployments.
2. `Set DP Social URL based on branch`: This addition modifies the `activity_pub` URL in `_config.yml` based on the branch context. For pushes or pull requests targeting the `master` branch, it sets the URL to the production environment (`SOCIAL_DP_PROD`). For the `staging` branch, it uses the staging environment URL (`SOCIAL_DP_STAGING`). This ensures that the correct external service URLs are used for different deployment stages.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,10 +31,19 @@ jobs:
       - run: sudo gem install jekyll
       - run: sudo bundle install
 
-      - name: Set URL based on branch
+      - name: Set Site URL based on branch
         run: |
-          if [[ "${{ github.ref }}" == "refs/heads/master" ]]; then
+          if [[ "${{ github.ref }}" == "refs/heads/master" ]] || [[ "${{ github.event_name }}" == "pull_request" && "${{ github.base_ref }}" == "master" ]]; then
             sed -i 's|url: "https://staging.hypha.coop"|url: "https://hypha.coop"|' _config.yml
+          fi
+
+      - name: Set DP Social URL based on branch
+        run: |
+          if [[ "${{ github.ref }}" == "refs/heads/master" ]] || [[ "${{ github.event_name }}" == "pull_request" && "${{ github.base_ref }}" == "master" ]]; then
+            sed -i 's|url: "https://social.dp.chanterelle.xyz"|url: ${{ secrets.SOCIAL_DP_PROD }}|' _config.yml
+          elif [[ "${{ github.ref }}" == "refs/heads/staging" ]] || [[ "${{ github.event_name }}" == "pull_request" && "${{ github.base_ref }}" == "staging" ]]; then
+            # Replace with staging URL for activity_pub (SOCIAL_DP_STAGING)
+            sed -i 's|url: "https://social.dp.chanterelle.xyz"|url: ${{ secrets.SOCIAL_DP_STAGING }}|' _config.yml
           fi
 
       # Decode the correct key based on the branch
