Update DP Social URL configuration in GitHub Actions

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,10 +40,10 @@ jobs:
       - name: Set DP Social URL based on branch
         run: |
           if [[ "${{ github.ref }}" == "refs/heads/master" ]] || [[ "${{ github.event_name }}" == "pull_request" && "${{ github.base_ref }}" == "master" ]]; then
-            sed -i 's|url: "https://social.dp.chanterelle.xyz"|url: ${{ secrets.SOCIAL_DP_PROD }}|' _config.yml
+            sed -i 's|url: "https://social.dp.chanterelle.xyz"|url: ${{ vars.SOCIAL_DP_PROD }}|' _config.yml
           elif [[ "${{ github.ref }}" == "refs/heads/staging" ]] || [[ "${{ github.event_name }}" == "pull_request" && "${{ github.base_ref }}" == "staging" ]]; then
             # Replace with staging URL for activity_pub (SOCIAL_DP_STAGING)
-            sed -i 's|url: "https://social.dp.chanterelle.xyz"|url: ${{ secrets.SOCIAL_DP_STAGING }}|' _config.yml
+            sed -i 's|url: "https://social.dp.chanterelle.xyz"|url: ${{ vars.SOCIAL_DP_STAGING }}|' _config.yml
           fi
 
       # Decode the correct key based on the branch
