--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ feed:
       description: "Hypha writes about our work in the Cosmos ecosystem"
 
 activity_pub:
-  url: https://social.dp.chanterelle.xyz
+  url: "https://social.dp.chanterelle.xyz"
   username: "HyphaCoop"
   icons:
   - "assets/images/hypha-social.png"
