Add Banner image and include it in Activity Pub config

--- a/_config.yml
+++ b/_config.yml
@@ -85,3 +85,5 @@ activity_pub:
   username: "dripline"
   icons:
   - "assets/images/hypha-social.png"
+  images:
+  - "assets/images/social-banner.png"
