Set `activity: false` to cosmos/posts

--- a/_config.yml
+++ b/_config.yml
@@ -59,6 +59,8 @@ defaults:
       type: cosmos
     values:
       layout: cosmos/post
+      activity: false
+
 plugins: [
   jekyll-activity-pub,
 ]
