Replace `HyphaCoop` for `dripline` as AP username

--- a/_config.yml
+++ b/_config.yml
@@ -82,6 +82,6 @@ feed:
 
 activity_pub:
   url: "https://social.dp.chanterelle.xyz"
-  username: "HyphaCoop"
+  username: "dripline"
   icons:
   - "assets/images/hypha-social.png"
